Added the quote in Gallery page

--- a/Gallery/index.html
+++ b/Gallery/index.html
@@ -223,6 +223,7 @@
             <img class="img" src="img/rectangle-19.png" />
             <img class="rectangle-2" src="img/rectangle-20.png" /> -->
           </div>
+          <div class="quote">Made with Coffee by NeuralThread</div>
         </div>
         <div class="neuralthread-wrapper"><img class="neuralthread" src="img/neuralthread-1500h-1.png" /></div>
       </div>
