Added quote at footer

--- a/Gallery/index.html
+++ b/Gallery/index.html
@@ -223,9 +223,13 @@
             <img class="img" src="img/rectangle-19.png" />
             <img class="rectangle-2" src="img/rectangle-20.png" /> -->
           </div>
-          <div class="quote">Made with Coffee by NeuralThread</div>
         </div>
-        <div class="neuralthread-wrapper"><img class="neuralthread" src="img/neuralthread-1500h-1.png" /></div>
+        
+        <div class="neuralthread-wrapper">
+          <img class="neuralthread" src="img/neuralthread-1500h-1.png" />
+          <div class="quote">Made with &#x2615 by NeuralThread</div>
+        </div>
+          
       </div>
       <div class="heading">
         <img class="neuralthread-h" src="img/neuralthread-1500h-1-1.png" />
