--- a/Home/index.html
+++ b/Home/index.html
@@ -215,7 +215,10 @@
           </div>
         </div>
       </div>
-      <div class="neuralthread-wrapper" style="width: 100%;"><img class="neuralthread" src="img/neuralthread-1500h-1.png" /></div>
+      <div class="neuralthread-wrapper">
+        <img class="neuralthread" src="img/neuralthread-1500h-1.png" />
+        <div class="quote">Made with &#x2615 by NeuralThread</div>
+      </div>
       <div class="heading" style="width: 94%;">
         <img class="neuralthread-h" src="img/neuralthread-1500h-1-1.png" />
         <div class="frame-14">
