--- a/Team/index.html
+++ b/Team/index.html
@@ -98,7 +98,10 @@
           <img class="line" src="img/line-1.svg" />
         </div>
       </div>
-      <div class="neuralthread-wrapper"><img class="neuralthread" src="img/neuralthread-1500h-1-1.png" /></div>
+      <div class="neuralthread-wrapper">
+        <img class="neuralthread" src="img/neuralthread-1500h-1.png" />
+        <div class="quote">Made with &#x2615 by NeuralThread</div>
+      </div>
       <div class="heading">
         <img class="neuralthread-h" src="img/neuralthread-1500h-1.png" />
         <div class="frame-5">
