Prepared for github hosting

--- a/Gallery/index.html
+++ b/Gallery/index.html
@@ -234,7 +234,7 @@
       <div class="heading">
         <img class="neuralthread-h" src="img/neuralthread-1500h-1-1.png" />
         <div class="div">
-          <a class="links" href="../Home/index.html"><div class="nav-item">Home</a></div>
+          <a class="links" href="../index.html"><div class="nav-item">Home</a></div>
           <a class="links" href="../Team/index.html"><div class="nav-item">Team</a></div>
           <a class="links" href="../Gallery/index.html"><div class="nav-item">Gallery</a></div>
         </div>
