--- a/index.html
+++ b/index.html
@@ -223,8 +223,8 @@
         <img class="neuralthread-h" src="img/neuralthread-1500h-1-1.png" />
         <div class="frame-14">
           <a class="links" href="index.html"><div class="nav-item">Home</a></div>
-          <a class="links" href="../Team/index.html"><div class="nav-item">Team</a></div>
-          <a class="links" href="../Gallery/index.html"><div class="nav-item">Gallery</a></div>
+          <a class="links" href="Team/index.html"><div class="nav-item">Team</a></div>
+          <a class="links" href="Gallery/index.html"><div class="nav-item">Gallery</a></div>
         </div>
       </div>
     </div>
