--- a/Team/index.html
+++ b/Team/index.html
@@ -105,7 +105,7 @@
       <div class="heading">
         <img class="neuralthread-h" src="img/neuralthread-1500h-1.png" />
         <div class="frame-5">
-          <a class="links" href="../Home/index.html"><div class="nav-item">Home</a></div>
+          <a class="links" href="../index.html"><div class="nav-item">Home</a></div>
           <a class="links" href="../Team/index.html"><div class="nav-item">Team</a></div>
           <a class="links" href="../Gallery/index.html"><div class="nav-item">Gallery</a></div>
         </div>
